--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css">
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script> 
-    <script src="particles.min.js"></script>
+  
     <script src="main.js"></script>
 </head>
 <body>
@@ -139,7 +139,46 @@
    <script src="jquery.bgswitcher.js"></script>
    <script src="main.js" type="text/javascript"></script>
 
-   </body>
-   <script src="main.js" type="text/javascript"></script>
+   <script type="text/javascript">
 
+document.ready(function() {
+  // ここにコード
+});
+
+
+$(function(){
+  $('.slider').slick({
+   
+  });
+});
+
+$(".bg_slide").bgswitcher({
+    effect: "fade",
+    interval: 2500,
+    images: ["images/background1.jpg",
+             "images/background2.jpg",
+             "images/background3.jpg",
+             "images/background4.jpg",
+             "images/background5.jpg"]
+  });
+
+
+  jQuery(function($) {
+        $('.box').bgSwitcher({
+            images: ['img/bg1.jpg','img/bg2.jpg','img/bg3.jpg'],
+            interval: 5000,
+            loop: true,
+            shuffle: true,
+            effect: "drop",
+            duration: 2000,
+            easing: "swing"
+        });
+    });
+
+ 
+</script>
+<script src="main.js" type="text/javascript"></script>
+<script src="particles.min.js"></script>
+   </body>
+ 
  </html>
