--- a/index.html
+++ b/index.html
@@ -1,69 +1,72 @@
 <!DOCTYPE html>
 <html lang="ja">
+
 <head>
-    <meta charset="UTF-8">
-    <media name ="viewport" content="width = device-width, initial-scale = 1.0 minimum-scale = 1.0"></media>
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <title>happy hack</title>
-    <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
-    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick-theme.css">
-    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css">
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script> 
-  
-    <script src="main.js"></script>
-</head
->
+  <meta charset="UTF-8">
+  <media name="viewport" content="width = device-width, initial-scale = 1.0 minimum-scale = 1.0"></media>
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="style.css">
+  <title>happy hack</title>
+
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>　
+  <!-- jquery -->
+  <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick-theme.css">
+  <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css">
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+  <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+  <script src="https://unpkg.com/scrollreveal"></script>
+</head>
+
 <body>
 
-   <section class="header">
-    <div class="bg_slide"></div>
+  <section class="header">
+    <div class="bg_slide">
     <nav>
-        <ul>
-            <li> <a href="#Introduction">Introduction</a> </li>
-            <li> <a href="#Courses">Courses</a> </li>
-            <li> <a href="#Images">Images</a> </li>
-            <li> <a href="#Access">Access</a> </li>
-        </ul>
+      <ul>
+        <li> <a href="#Introduction">Introduction</a> </li>
+        <li> <a href="#Courses">Courses</a> </li>
+        <li> <a href="#Images">Images</a> </li>
+        <li> <a href="#Access">Access</a> </li>
+      </ul>
     </nav>
     <div class="title">
-        <img src="images/logo.png" alt="">
+      <img src="images/logo.png" alt="">
       <p>We are Web Designers.</p>
     </div>
-   
-   </section>
+  </div>
 
-   <section class="Introduction" id="Introduction" >
-       <h2>Introduction</h2>
-       <div class="sec1">
-       <img src="images/introduction_001.jpg" alt="" class="introimg1">
-       <div class="text">
-       <p>Happy Hackはいまをときめく若者がITを活用したものづくりに取り組める環境を提供しています。<br>
-        特に、Webデザイン領域のプログラミングを学習している生徒が一番積極的に活動しています。<br>
-        誰でも最初は初心者。それを一番知っている我々がプログラミングへの第一歩を踏み出すお手伝いをさせていただきます。
-       </p>
-       <a href="">会員登録</a>
-       </div>
-       </div>
-       <div class="sec2">
-       <img src="images/introduction_002.jpg" alt="" class="introimg2">
+  </section>
+
+  <section class="Introduction fuwa" id="Introduction">
+    <h2>Introduction</h2>
+    <div class="sec1">
+      <img src="images/introduction_001.jpg" alt="" class="introimg1">
       <div class="text">
-        <p>Happy Hackでは「楽しさ」と「真剣さ」をモットーにプログラミングを学びます。コースは全部で7つ準備をしています。<br>
-        WebデザインからWebサービス、3DゲームやiPhoneアプリまで幅広くお楽しみいただけます。<br>
-        自分の想いをカタチにして発信することをぜひこの場で体験してみてください。世界が変わって見えるかもしれません。
+        <p>Happy Hackはいまをときめく若者がITを活用したものづくりに取り組める環境を提供しています。<br>
+          特に、Webデザイン領域のプログラミングを学習している生徒が一番積極的に活動しています。<br>
+          誰でも最初は初心者。それを一番知っている我々がプログラミングへの第一歩を踏み出すお手伝いをさせていただきます。
         </p>
         <a href="">会員登録</a>
       </div>
-      </div> 
-   </section>
+    </div>
+    <div class="sec2">
+      <img src="images/introduction_002.jpg" alt="" class="introimg2">
+      <div class="text">
+        <p>Happy Hackでは「楽しさ」と「真剣さ」をモットーにプログラミングを学びます。コースは全部で7つ準備をしています。<br>
+          WebデザインからWebサービス、3DゲームやiPhoneアプリまで幅広くお楽しみいただけます。<br>
+          自分の想いをカタチにして発信することをぜひこの場で体験してみてください。世界が変わって見えるかもしれません。
+        </p>
+        <a href="">会員登録</a>
+      </div>
+    </div>
+  </section>
 
-   <section class="Courses" id="Courses">
+  <section class="Courses fuwa" id="Courses">
     <h2>Courses</h2>
-    
-       <div class="ue">
-       <div class="course" id="html">
+
+    <div class="ue">
+      <div class="course" id="html">
         <img src="images/html.png" alt="">
         <p>HTMLコース</p>
         <a href="">このコースを受ける</a>
@@ -85,10 +88,10 @@
         <img src="images/ruby.png" alt="">
         <p>Rubyコース</p>
         <a href="">このコースを受ける</a>
-     </div>
-     </div>
+      </div>
+    </div>
 
-     <div class="shita">
+    <div class="shita">
       <div class="course" id="java">
         <img src="images/js.png" alt="">
         <p>JavaScriptコース</p>
@@ -106,237 +109,73 @@
         <p>Goコース</p>
         <a href="">このコースを受ける</a>
       </div>
-      </div>
-      <div id="js-particles"></div>
-   </section>
+    </div>
+    <div id="js-particles"></div>
+  </section>
 
-   <section class="Images" id="Images">
+  <section class="Images" id="Images">
     <h2>Images</h2>
     <ul class="slider">
-        <li><img alt="画像1" src="images/background1.jpg" /></li>
-        <li><img alt="画像2" src="images/background2.jpg" /></li>
-        <li><img alt="画像3" src="images/background3.jpg" /></li>
-        <li><img alt="画像3" src="images/background4.jpg" /></li>
-        <li><img alt="画像3" src="images/background5.jpg" /></li>
-      </ul>
-   </section>
+      <li><img alt="画像1" src="images/background1.jpg" /></li>
+      <li><img alt="画像2" src="images/background2.jpg" /></li>
+      <li><img alt="画像3" src="images/background3.jpg" /></li>
+      <li><img alt="画像3" src="images/background4.jpg" /></li>
+      <li><img alt="画像3" src="images/background5.jpg" /></li>
+    </ul>
+  </section>
 
-   <section class="Access" id="Access">
-       <h2>Access</h2>
-       <div class="map">
-       <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3280.3129539477545!2d135.49025991499715!3d34.697285690909176!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6000e6f359905ed7%3A0x9fec1659611f776f!2zTGlmZSBpcyBUZWNoISDlpKfpmKrjgqrjg5XjgqPjgrk!5e0!3m2!1sja!2sjp!4v1645925014517!5m2!1sja!2sjp" width="800" height="500" style="border:0;" allowfullscreen="" loading="lazy" ></iframe>
-       </div>
-    </section>
-
-   
-   <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
-   <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
-   <script src="jquery.bgswitcher.js"></script>
-   <script src="main.js" type="text/javascript"></script>
-   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-   <script type="text/javascript" src="slick/slick.min.js"></script>
-   <script type="text/javascript" src="jquery.bgswitcher.js"></script>
-   <script type="text/javascript" src="particles.min.js"></script>
-  
-   <script type="text/javascript">
-
-document.ready(function() {
-  // ここにコード
-});
+  <section class="Access" id="Access">
+    <h2>Access</h2>
+    <div class="map">
+      <iframe
+        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3280.3129539477545!2d135.49025991499715!3d34.697285690909176!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6000e6f359905ed7%3A0x9fec1659611f776f!2zTGlmZSBpcyBUZWNoISDlpKfpmKrjgqrjg5XjgqPjgrk!5e0!3m2!1sja!2sjp!4v1645925014517!5m2!1sja!2sjp"
+        width="800" height="500" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+    </div>
+  </section>
 
 
-$(function(){
-  $('.slider').slick({
-   
-  });
-});
-
-$(".bg_slide").bgswitcher({
-    effect: "fade",
-    interval: 2500,
-    loop: true,
-    duration: 1000,
-    easing: "swing",
-    images: ["images/background1.jpg",
-             "images/background2.jpg",
-             "images/background3.jpg",
-             "images/background4.jpg",
-             "images/background5.jpg"]
-  });
-
-
-  jQuery(function($) {
-        $('.Images').bgSwitcher({
-            images: ['img/bg1.jpg','img/bg2.jpg','img/bg3.jpg'],
-            interval: 5000,
-            loop: true,
-            shuffle: true,
-            effect: "drop",
-            duration: 2000,
-            easing: "swing"
-        });
-    });
-
-
-
-
-  particlesJS('js-particles',
-  {
-    "particles": {
-      "number": {
-        // シェイプの数
-        "value": 200,
-        "density": {
-          "enable": true,
-          // シェイプの密集度
-          "value_area": 800
-        }
-      },
-      "color": {
-        "value": "#ffffff"
-      },
-      "shape": {
-        // //シェイプの形（circle:丸、edge:四角、triangle:三角、polygon:多角形、star:星型、image:画像）
-        "type": "circle",
-        "stroke": {
-           //シェイプの外線の太さ
-          "width": 0,
-          "color": "#ffffff"
-        },
-        //typeをpolygonにした時の設定
-        "polygon": {
-          "nb_sides": 5
-        },
-         //typeをimageにした時の設定
-        "image": {
-          "src": "img/github.svg",
-          "width": 100,
-          "height": 100
-        }
-      },
-      "opacity": {
-        //シェイプの透明度
-        "value": 0.5,
-        //シェイプの透明度をランダムにするか否か
-        "random": true,
-        "anim": {
-           //シェイプの透明度をアニメーションさせるか否か
-          "enable": false,
-          //アニメーションのスピード
-          "speed": 10,
-          //透明度の最小値
-          "opacity_min": 0.1,
-          //全てのシェイプを同時にアニメーションさせるか否か
-          "sync": false
-        }
-      },
-      "size": {
-         //シェイプの大きさ
-        "value": 5,
-         //シェイプの大きさをランダムにするか否か
-        "random": true,
-        "anim": {
-          //シェイプの大きさをアニメーションさせるか否か
-          "enable": false,
-          //アニメーションのスピード
-          "speed": 40,
-           //大きさの最小値
-          "size_min": 0.1,
-          //全てのシェイプを同時にアニメーションさせるか否か
-          "sync": false
-        }
-      },
-      "line_linked": {
-         //線を表示するか否か
-        "enable": true,
-        //線をつなぐシェイプの間隔
-        "distance": 175,
-        //線の色
-        "color": "#ffffff",
-        //線の透明度
-        "opacity": 0.4,
-        //線の太さ
-        "width": 1
-      },
-      "move": {
-        //シェイプの動かすか
-        "enable": true,
-        //シェイプの動くスピード
-        "speed": 10,
-        //エリア全体の動き(none、top、top-right、right、bottom-right、bottom、bottom-left、left、top-leftより選択)
-        "direction": "none",
-        "random": false,
-        //個々のシェイプの動きを止めるか否か
-        "straight": false,
-        //エリア外に出たシェイプの動き(out、bounceより選択)
-        "out_mode": "out",
-        "attract": {
-          "enable": false,
-          "rotateX": 600,
-          "rotateY": 1200
-        }
-      }
-    },
-    "interactivity": {
-      "detect_on": "canvas",
-      "events": {
-         //マウスオーバーが有効か否か
-        "onhover": {
-          "enable": false,
-          "mode": "repulse"
-        },
-        "onclick": {
-          //クリックが有効か否か
-          "enable": false,
-          "mode": "push"
-        },
-        "resize": true
-      },
-      // 上記2つの処理詳細
-      "modes": {
-        "grab": {
-          "distance": 400,
-          "line_linked": {
-            "opacity": 1
-          }
-        },
-        "bubble": {
-          "distance": 400,
-          "size": 40,
-          "duration": 2,
-          "opacity": 8,
-          "speed": 3
-        },
-        "repulse": {
-          "distance": 200
-        },
-        "push": {
-          "particles_nb": 4
-        },
-        "remove": {
-          "particles_nb": 2
-        }
-      }
-    },
-    "retina_detect": true,
-    "config_demo": {
-      "hide_card": false,
-      "background_color": "#b61924",
-      "background_image": "",
-      "background_position": "50% 50%",
-      "background_repeat": "no-repeat",
-      "background_size": "cover"
-    }
-  }
-);
+  <script type="text/javascript" src="slick/slick.min.js"></script>
 
  
+  <script type="text/javascript">
+    $(function () {
+      $('.slider').slick({
+
+      });
+    });
+  </script>
+
+  <script type="text/javascript" src="jquery.bgswitcher.js"></script>
+  <script type="text/javascript">
+    $(".bg_slide").bgswitcher({
+      effect: "fade",
+      interval: 2500,
+      loop: true,
+      duration: 1000,
+      easing: "swing",
+      images: ["images/background1.jpg",
+        "images/background2.jpg",
+        "images/background3.jpg",
+        "images/background4.jpg",
+        "images/background5.jpg"]
+    });
+  </script>
+ 
+ <script type="text/javascript">
+ScrollReveal().reveal('.fuwa', { 
+duration: 800, // アニメーションの完了にかかる時間
+  viewFactor: 0.2, // 0~1,どれくらい見えたら実行するか
+  reset: true   // 何回もアニメーション表示するか
+});
 </script>
 
-   </body>
+<script type="text/javascript" src="particles.min.js"></script>
+<script src="main.js"></script>
 
-   <footer>
-    @2019 Happy Hack Inc.
-   </footer>
 
- </html>
+<footer>
+  @2019 Happy Hack Inc.
+</footer>
+
+</body>
+</html>
